Fixes dark mode

--- a/style.css
+++ b/style.css
@@ -107,13 +107,10 @@ body.dark {
     background: rgba(121, 121, 90, 0.7) !important;
     border-top: solid rgb(208, 174, 70) 3px !important;
 }
-.dark .warn-text {
+.dark .warn {
     background: rgba(120, 86, 86, 0.7);
     border-top: solid rgb(158, 22, 22) 3px;
 }
 .dark .swt-update-time, .dark .warn-update-time {
     color: lightgray;
-}
-.dark .warn-icon-img {
-    border: rgb(80,80,80) solid 1.5px !important;
 }
